--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -226,6 +226,7 @@
         </defs>
       </svg>
       <h1>Hello, {{ title }}</h1>
+      <app-inventory-app></app-inventory-app>
       <p>Congratulations! Your app is running. 🎉</p>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
