--- a/src/app/inventory-app/product-row/product-row.component.html
+++ b/src/app/inventory-app/product-row/product-row.component.html
@@ -1,15 +1,14 @@
-<app-product-image [product]="product">
-</app-product-image>
+<product-image [product]="product"></product-image>
 <div class="content">
     <div class="header">{{product.name}}</div>
     <div class="meta">
         <div class="product-sku">SKU #{{product.sku}}</div>
     </div>
     <div class="description">
-        <app-product-department [product]="product"></app-product-department>
+        <product-department [product]="product"></product-department>
     </div>
 </div>
-<app-product-display [price]="product.price"></app-product-display>
+<price-display [price]="product.price"></price-display>
    
 
 
