--- a/src/app/inventory-app/inventory-app.component.html
+++ b/src/app/inventory-app/inventory-app.component.html
@@ -1,5 +1,4 @@
 ,<div class="inventory-app">
-    <app-products-list [productList]="products" (onProductSelected)="productWasSelected($event)">
-
-    </app-products-list>
+    <products-list [productList]="products" (onProductSelected)="productWasSelected($event)">
+    </products-list>
 </div>
