--- a/src/app/inventory-app/inventory-app.component.html
+++ b/src/app/inventory-app/inventory-app.component.html
@@ -1,4 +1,7 @@
-,<div class="inventory-app">
-    <products-list [productList]="products" (onProductSelected)="productWasSelected($event)">
-    </products-list>
+<div class="ui main text container">
+    <div class="inventory-app">
+        <products-list [productList]="products" (onProductSelected)="productWasSelected($event)">
+        </products-list>
+    </div>
 </div>
+
